# yolo-online-learner

./: .gitignore  CLOUD.md  pyproject.toml  readme.md  requirements-vision.txt  requirements.txt
attention/: __init__.py  scheduler.py
docs/: DEBUGGING.md  DEVELOPMENT_PLAN.md  FUTURE_IDEAS.md  HANDOFF.md  OBS_SETUP.md  OPUS_PLAN.md  PHASED_PLAN.md  PROTOYOLO_SPEC.md  REFERENCE_REPOS.md  REFRACTOR_PLAN.md  TRIUNE_ARCHITECTURE.md  codex.rtext  gemini-plans.md  gemini.md  gpt-plans.txt
experiments/: __init__.py  config.py  run.py
features/: __init__.py  embedding.py  wta_layer.py
graph/: percept_graph.py
perception/: __init__.py  bbp.py  video.py  yolo_adapter.py
scripts/: generate_synthetic_video.py  insect_collider.py  insect_forager.py  insect_retina.py  local_setup_run.sh  one_shot_demo.sh  protoyolo_cortex.py  run_bbp_stream.py  run_tracker_stream.py  summarize_session.py
tests/: test_attention.py  test_bbp.py  test_embedding.py  test_gaze.py  test_object_permanence.py  test_retina.py  test_tracker.py  test_world_model.py  test_wta.py
tracking/: __init__.py  kalman.py  object_permanence.py  tracker.py  world_model.py
vision/: __init__.py  gaze.py  retina.py  sensory_buffer.py
